# berry-phase-cancellation

./: README.md  experiments.ipynb  pyproject.toml
berry_cancellation/: __init__.py  estimators.py  evolution.py  hamiltonians.py  manybody.py  reference.py
experiments/: fig_dip_compare.py  fig_distributions.py  fig_gap_dip.py  fig_manybody.py  fig_manybody_check.py  fig_phi1_validation.py  fig_randomization_montecarlo.py  fig_scaling.py  fig_scaling_signed.py  fig_spin_half_check.py  fig_theory_validation.py
paper/: README.md  fig1.py  fig2.py  fig3.py  fig4.py
paper/cache/: fig1.npz  fig2.npz  fig3.npz  fig4.npz  fig5.npz
paper/old/: fig1.py
tests/: test_cancellation.py
